Bugfixes and optimizations Properly handle async exceptions Don't make a new thread for every user when storing in bulk Organize listeners and ignore disabled worlds